--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <style>
 h1{
-    color :red;
+    color :brown;
     border:outset;
     /* border-width: 10px; border-color: red green blue yellow;  */
-    background-color:black;
+    background-color:#000000;
 text-align: justify;
 }
 h2{
